--- a/views/index.jade
+++ b/views/index.jade
@@ -1,8 +1,11 @@
 extends layout
 
 block content
-	input#search(type="search", placeholder="Search Craig's Jobs")
-	h2#results
+	h1 search sf bikes
+	input#search(type="search", placeholder="Search Craig's Bikes")
+	ul#results
+	include template.html
 
+	script(src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.5/handlebars.min.js")
 	script(src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js")
 	script(src="/javascripts/main.js")
