--- a/v2/views/register.jade
+++ b/v2/views/register.jade
@@ -1,6 +1,7 @@
 extends layout
 
 block content
+	h1 Please create an account below
 	form(action='/register', method='post')
 		div
 			label Username:
